--- a/CareAndGrow/src/app/components/app-footer/privacy/privacy-policy/privacy-policy.component.html
+++ b/CareAndGrow/src/app/components/app-footer/privacy/privacy-policy/privacy-policy.component.html
@@ -293,7 +293,7 @@
 
         <p class="mt-3"><u><strong>5.4 Contact us</strong></u></p>
         <p>If you have any questions, concerns, or requests regarding this privacy policy or our data practices, please
-          contact us at: <u class="text-primary-emphasis">tamas.marcu96@gmail.com</u></p>
+          contact us at: <u class="text-primary-emphasis">tamas.marcu96&#64;gmail.com</u></p>
 
       </li>
     </ol>
